# smart-manager

./: Cargo.toml  Dioxus.toml
assets/: main.css  tailwind.css
crates/smart-manager-core/: Cargo.toml  build.rs
crates/smart-manager-core/examples/: generate_writing_samples.rs
crates/smart-manager-core/samples/: TODO.md  case.json  gantt.json  gantt.md  gantt.txt  todo.html
crates/smart-manager-core/src/: core.rs  lib.rs  main.rs  priority.rs  questions.rs
crates/smart-manager-core/src/writer/: gantt.rs  mod.rs  todo.rs
crates/smart-manager-core/templates/: TODO.md  gantt.md  gantt_chart.md  gantt_table.md  todo.html  todo.md
src/: app.rs  dummy.rs  main.rs  models.rs
src/components/: gantt.rs  mod.rs  nav.rs  todo.rs
