[workspace]
members = [".", "crates/*"]
resolver = "2"

[package]
name = "smart-manager"
version = "0.1.0"
authors = ["David Huang <dh.fwc18@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
smart-manager-core = { version = "0.1.0", path = "crates/smart-manager-core" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
